tests/sksl/errors/LayoutInInterfaceBlock.glsl
### Compilation failed:

error: 4: layout qualifier 'binding' is not permitted here
error: 5: layout qualifier 'set' is not permitted here
2 errors
